<resources>
    <string name="app_name">All PDF Reader</string>
    <string-array name="fontStyles" translatable="false">
        <item>NORMAL</item>
        <item>BOLD</item>
        <item>ITALIC</item>
        <item>UNDERLINE</item>
        <item>STRIKETHRU</item>
        <item>BOLDITALIC</item>
    </string-array>

    <string name="merge_pdf">Merge PDF</string>
    <string name="split_pdf">Split PDF</string>
    <string name="invert_pdf">Invert</string>
    <string name="merge">Merge</string>
    <string name="split">Split</string>
    <string name="invert">Invert</string>
    <string name="remove_duplicate_page">Remove duplicate pages</string>
    <string name="add_password">Add password</string>
    <string name="remove_password">Remove password</string>
    <string name="rotate_pages">Rotate pages</string>
    <string name="add_watermark">Add watermark</string>
    <string name="add_image">Add image</string>
    <string name="add_image_2">AddImage</string>
    <string name="text_to_pdf">Text To PDF</string>
    <string name="image_to_pdf">Image To PDF</string>
    <string name="pdf_to_image">PDF To Image</string>
    <string name="manage">Manage</string>
    <string name="delete_content">Are you sure you want to delete this page?</string>
    <string name="insert_page">Insert page</string>
    <string name="blank_page">Blank pages</string>
    <string name="image">Images</string>
    <string name="page_size">Page size</string>
    <string name="follow_previous">Follow Previous</string>
    <string name="letter">Letter</string>
    <string name="legal">Legal</string>
    <string name="page_placeholder">Enter page number...</string>
    <string name="storage_path" translatable="false">Storage path</string>
    <string name="last_view">Last viewed</string>
    <string name="file_size">File size</string>
    <string name="insert">Insert</string>
    <string name="extract">Extract</string>
    <string name="image_to_pdf_2">ImageToPdf</string>
    <string name="search_file">Search file</string>
    <string name="choose_at_least">You must choose at least 1 item</string>
    <string name="delete">Delete</string>
    <string name="duplicate">Duplicate</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="ok">Ok</string>
    <string name="invalid_value">Invalid value</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_repetition_found">No repetition found</string>
    <string name="split_suggest">The PDF will be split into multiple PDFs. \n Format example: 1-5,6-7,8,9</string>
    <string name="error_page_number">Invalid page number</string>
    <string name="error_page_range">Invalid range input</string>
    <string name="error_invalid_input">Invalid input</string>
    <string name="enter_page_split">Enter page split</string>
    <string name="encryption">Encryption</string>
    <string name="decryption">Decryption</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="remove_password_error">Can\'t remove password</string>
    <string name="rotate">Rotate</string>
    <string name="angle_90">90</string>
    <string name="angle_180">180</string>
    <string name="angle_270">270</string>
    <string name="watermark">Watermark</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_angle">Enter Angle</string>
    <string name="choose_color">Choose Color</string>
    <string name="enter_font_size">Enter font size</string>
    <string name="choose_font_family">Choose Font Family</string>
    <string name="choose_style">Choose style</string>
    <string name="add_image_step_1">1. Select PDF file</string>
    <string name="add_image_step_2">2. Select Images</string>
    <string name="select_image">Select Images</string>
    <string name="select">Select</string>
    <string name="please_select_pdf_file">Please select pdf file.</string>
    <string name="please_select_image">Please select photo</string>
    <string name="organize_pages">Organize Pages</string>
    <string name="extract_image">Extract images</string>
    <string name="tool_done">Done</string>
    <string name="file_is_protected">File is protected</string>
    <string name="file_not_protected">File is not protected</string>
    <string name="info_add_image">You can hold and drag to reposition the images</string>
    <string name="info_merge">You can swipe left to be able to delete or duplicate file</string>
    <string name="info_organize">Drag and drop to organize pages. \nClick on a page to delete</string>
    <string name="info_extract">Click on a page to select</string>
    <string name="done_2">Done!</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="file_created_at">File is created at</string>
    <string name="success">Success</string>
    <string name="sort">Sort</string>
</resources>