<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@color/tokenBlack70">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/ToolTextDefaultMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Create PDF" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_file_name_view"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:hint="@string/enter_file_name"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <EditText
                android:id="@+id/edt_file_name"
                style="@style/ToolTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions"
                android:padding="@dimen/_10sdp"
                tools:hint="@string/enter_file_name">

                <requestFocus />
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/input_file_name_view">

            <RadioButton
                android:id="@+id/rd_90"
                style="@style/ToolTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/angle_90" />

            <RadioButton
                android:id="@+id/rd_180"
                style="@style/ToolTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/angle_180" />

            <RadioButton
                android:id="@+id/rd_270"
                style="@style/ToolTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/angle_270" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_negative"
                style="@style/ToolTextDefaultMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:textColor="?attr/colorPrimary"
                android:background="@drawable/btn_background_outline"
                android:gravity="center"
                android:padding="@dimen/_7sdp"
                android:text="@string/cancel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_positive"
                style="@style/ToolTextDefaultMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/color_background_dialog"
                android:background="@drawable/btn_background_fill"
                android:gravity="center"
                android:padding="@dimen/_7sdp"
                android:text="@string/ok" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>