<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:gravity="center"
    tools:background="@color/tokenBlack70">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_dialog"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            style="@style/ToolTextDefaultMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Create PDF" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/enter_file_name"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_file_name"
                        style="@style/ToolTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:padding="@dimen/_10sdp"
                        tools:hint="@string/enter_file_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enter_text"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_watermark_text"
                        style="@style/ToolTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="textNoSuggestions"
                        android:padding="@dimen/_10sdp"
                        tools:hint="@string/enter_text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_angle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/enter_angle"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_angle"
                        style="@style/ToolTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_angle"
                        android:imeOptions="actionDone"
                        android:text="0"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/choose_watermark_color"
                    style="@style/ToolTextDefaultMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/choose_color" />

                <com.jaredrummler.android.colorpicker.ColorPickerView
                    android:id="@+id/watermarkColor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_5sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:hint="@string/enter_font_size"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_font_size"
                        style="@style/ToolTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_font_size"
                        android:imeOptions="actionDone"
                        android:text="50"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ToolTextDefaultMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/choose_font_family" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_font"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:spinnerMode="dropdown" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/ToolTextDefaultMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/choose_style" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spn_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:spinnerMode="dropdown" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_15sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_password_layout">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_negative"
                        style="@style/ToolTextDefault"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="?attr/colorPrimary"
                        android:background="@drawable/btn_background_outline"
                        android:gravity="center"
                        android:padding="@dimen/_7sdp"
                        android:text="@string/cancel" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_positive"
                        style="@style/ToolTextDefault"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/btn_background_fill"
                        android:gravity="center"
                        android:textColor="@color/tokenWhite100"
                        android:padding="@dimen/_7sdp"
                        android:text="@string/save" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>