<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_dialog_background"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/_12sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_page"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="sans-serif" />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/icon_close_insert"
                android:contentDescription="Close"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/_12sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_blank_page"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/blank_page"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/icon_insert_image"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:text="@string/image"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textFontWeight="500"
                android:fontFamily="sans-serif" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
